# ratty

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  website.yml
assets/objects/: Ferris.glb  skate.stl
config/: ratty.toml
protocols/: graphics.md
src/: cli.rs  config.rs  inline.rs  keyboard.rs  kitty.rs  lib.rs  main.rs  model.rs  mouse.rs  plugin.rs  rendering.rs  rgp.rs  runtime.rs  scene.rs  soft_terminal.rs  systems.rs  terminal.rs
src/scene/: mobius.rs  mod.rs
website/: index.html
website/assets/css/: site.css
website/assets/js/: site.js
widget/: Cargo.toml  README.md
widget/examples/: big_rat.rs  document.rs  draw.rs  rubiks_cube.rs
widget/src/: lib.rs
