[package]
name = "ratty"
version = "0.1.0"
description = "A GPU-rendered terminal emulator that supports inline 3D graphics"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
base64 = "0.22"
bevy = { version = "0.18.1", default-features = false, features = [
    "std",
    "async_executor",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_log",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_winit",
    "gltf_animation",
    "keyboard",
    "mouse",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "tonemapping_luts",
    "wayland",
    "x11",
    "zstd_rust",
] }
etcetera = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
parley_ratatui = "0.2.0"
pollster = "0.4"
portable-pty = "0.8"
ratatui = "0.30"
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
tobj = "4.0"
toml = "0.8"
vt100 = "0.16"

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 3
